@@ -5,6 +5,8 @@ SVN from 0.66:
         - Added an option (--keep-response-files for DSSS and -keeprfiles for
           Rebuild) to not delete response files (see ticket #62).
         - Added the dsss.conf option 'defaultTargets' (see ticket #64).
+        - Added an option to DSSS to manually specify the URL to receive the
+          source list from (see ticket #77).
 
 0.66 from 0.65:
         - Rebuild: Fixed a bug with -listnffiles and -of conflicting (see
